--- a/style.css
+++ b/style.css
@@ -139,6 +139,69 @@ img {
 	-webkit-transform: scale(1.5); /* Safari 3-8 */
 	transform: scale(1.5);
 }
+/* New NavBar*/
+.navbar2 {
+	background-color: var(--primary-color);
+	color: #fff;
+	height: 70px;
+}
+.navbar2 ul {
+	display: flex;
+	justify-content: end;
+	list-style-type: none;
+}
+
+.navbar2 a {
+	color: var(--dark-color);
+	padding: 10px;
+	margin: 0 5px;
+	font-size: 1.3rem;
+	text-decoration: none;
+}
+.navbar2 a:hover {
+	color: var(--dark-color);
+}
+.navbar2 p {
+	color: #333;
+	padding: 4px;
+	margin: 4px;
+}
+li {
+	display: block;
+	transition-duration: 0.5s;
+}
+
+li:hover {
+	cursor: pointer;
+}
+.dropdown {
+	padding: 2px;
+}
+ul li ul {
+	visibility: hidden;
+	opacity: 0;
+	position: absolute;
+	transition: all 0.5s ease;
+	margin-top: 1rem;
+	margin-right: 10px;
+	left: 0;
+	display: none;
+	border: solid white 1px;
+	background-color: #fff;
+	z-index: 1;
+}
+
+ul li:hover > ul,
+ul li ul:hover {
+	visibility: visible;
+	opacity: 1;
+	display: block;
+}
+
+ul li ul li {
+	clear: both;
+	width: 100%;
+}
 /* Margin */
 .my-1 {
 	margin: 1rem 0;
