--- a/grid_style.css
+++ b/grid_style.css
@@ -59,12 +59,11 @@ nav {
 	text-transform: uppercase;
 	text-decoration: none;
 	color: black;
+	margin: 8px;
 }
 
 .navLinks:hover {
 	color: white;
-
-	padding: 1em 1em;
 }
 
 .contact {
@@ -114,6 +113,9 @@ ul li ul li {
 	clear: both;
 	width: 100%;
 }
+.context_text {
+	transition-duration: 0.5s;
+}
 
 #contact_info {
 	display: none;
@@ -131,6 +133,7 @@ ul li ul li {
 .flex_container {
 	display: flex;
 	justify-content: end;
+	margin-right: 4px;
 }
 
 .contact_text {
