--- a/drop.css
+++ b/drop.css
@@ -5,8 +5,97 @@ body {
 	text-align: center;
 	background: #e3caa1;
 }
-
 ul {
+	display: inline;
+
+	padding: 15px 4px 17px 0;
+	list-style: none;
+}
+
+ul li {
+	font: bold 18px/18px sans-serif;
+	display: inline-block;
+	position: relative;
+	padding: 15px 20px;
+	margin-left: 20px;
+	margin-right: 20px;
+	cursor: pointer;
+}
+
+/*ul li:hover {
+	background: #555;
+	color: #fff;
+}*/
+ul li ul {
+	padding: 0;
+	position: absolute;
+	top: 48px;
+	right: 4px;
+	left: auto;
+	width: 400px;
+	display: none;
+	opacity: 0;
+	visibility: hidden;
+}
+
+ul li ul li {
+	background: #fff;
+	display: block;
+	color: #333;
+	text-shadow: 0 -1px 0 #000;
+	margin: 0;
+	text-align: left;
+}
+
+ul li ul li:hover {
+	background: #667;
+}
+ul > li:last-child ul {
+	right: 4px;
+	left: auto;
+}
+ul li:hover ul {
+	display: block;
+	opacity: 1;
+	visibility: visible;
+}
+.port_ul li {
+	text-align: center;
+}
+.side_list {
+	position: absolute;
+	top: 0px;
+	right: 12px;
+	left: auto;
+	text-align: left;
+}
+
+.side_list:hover {
+	background: #fff;
+	color: #333;
+}
+
+.list_p {
+	font-weight: 200;
+}
+
+.btn {
+	padding: 10px 30px;
+	cursor: pointer;
+	background: #333;
+	color: #fff;
+	border: none;
+	border-radius: 5px;
+}
+.btn-outline {
+	background-color: transparent;
+	border: 1px solid #fff;
+}
+.btn:hover {
+	transform: scale(0.88);
+	color: #fff;
+}
+/*ul {
 	text-align: left;
 	display: inline;
 	margin: 0;
@@ -77,3 +166,4 @@ ul li:hover ul {
 	opacity: 1;
 	visibility: visible;
 }
+*/
